--- a/src/components/GameStatus.css
+++ b/src/components/GameStatus.css
@@ -1,5 +1,5 @@
 .GameStatus {
-  padding: 1.5rem 1.5rem 0;
+  padding: 1.5rem 1.5rem;
   flex: 1 0;
   text-align: center;
 }
